[package]
name = "twitch-cli"
version = "0.1.0"
authors = ["loicngr <pro.nogierloic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }
dotenv = "0.15"

[profile.release]
debug = true